backend/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dataframe-playground-flask-server-ingress
  namespace: hiri
spec:
  rules:
  - host: dataframe-playground-backend.test.fedcloud.eu
    http:
      paths:
      - backend:
          serviceName: dataframe-playground-flask-server
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
